==> vvpai9/LPC1768-Motor-Safety-Interlock/Keil_v4/ARM/Boards/Keil/MCB1000/USBHID/usbhw_LPC13xx.c <==
#include <LPC13xx.H>                        /* LPC13xx definitions */
#include "type.h"
#include "usb.h"
#include "usbcfg_LPC13xx.h"
#include "usbreg_LPC13xx.h"
#include "usbhw_LPC13xx.h"
#include "usbcore.h"
#include "usbuser.h"
#define EP_MSK_CTRL 0x0001      /* Control Endpoint Logical Address Mask */
#define EP_MSK_BULK 0x000E      /* Bulk Endpoint Logical Address Mask */
#define EP_MSK_INT  0x000E      /* Interrupt Endpoint Logical Address Mask */
#define EP_MSK_ISO  0x0010      /* Isochronous Endpoint Logical Address Mask */

void USB_Init (void) {

  LPC_SYSCON->SYSAHBCLKCTRL |= ((1<<14) |   /* Enable AHB clock for USB_REG. */
                                (1<<16)  ); /* enable AHB clock for IO configuration block. */
                                            /* D+, D- needs not to be configured  */
  LPC_IOCON->PIO0_3  &= ~0x07;              /* P0.3 VBUS */
  LPC_IOCON->PIO0_3  |=  0x01;              /* Select function USB_VBUS */
  LPC_IOCON->PIO0_6  &= ~0x07;              /* P0.6 SoftConnect */
  LPC_IOCON->PIO0_6  |=  0x01;              /* Selects function USB_CONNECT */

#if USB_LPC13XX_FIQ
  /* only BULK EP3 and FRAME(ISO) can be routed to FIQ but not all at the same time. */
  LPC_USB->DevFIQSel = USB_LPC13XX_FIQ_VAL;
  NVIC_EnableIRQ(USB_FIQn);                 /* enable USB HighPriority interrupt */
#endif /* USB_LPC13XX_FIQ */

  NVIC_EnableIRQ(USB_IRQn);                 /* enable USB LowPriority interrupt */

  USB_Reset();
  USB_SetAddress(0);
}

void USB_Connect (BOOL con) {
  WrCmdDat(CMD_SET_DEV_STAT, DAT_WR_BYTE(con ? DEV_CON : 0));
}

void USB_Reset (void) {

  LPC_USB->DevIntClr = 0xFFFFFFFF;                        /* clear all interrupts */
//  LPC_USB->DevIntEn  = (0x1F << 1)    |                   /* enable EP0..4        interrupt */
  LPC_USB->DevIntEn  = (0xFF << 1)    |                   /* enable EP0..4        interrupt */
                       DEV_STAT_INT   |                   /* enable device status interrupt */
                       (USB_SOF_EVENT ? FRAME_INT : 0);   /* enable frame         interrupt */

}

void USB_SetAddress (U32 adr) {
  WrCmdDat(CMD_SET_ADDR, DAT_WR_BYTE(DEV_EN | adr)); /* Don't wait for next */
  WrCmdDat(CMD_SET_ADDR, DAT_WR_BYTE(DEV_EN | adr)); /*  Setup Status Phase */
}

void USB_EnableEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(0));
}

void USB_DisableEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(EP_STAT_DA));
}

void USB_ResetEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(0));
}

void USB_SetStallEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(EP_STAT_ST));
}

void USB_ClrStallEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(0));
}

void USB_ClearEPBuf (U32 EPNum) {
  WrCmdEP(EPNum, CMD_CLR_BUF);
}

U32 USB_ReadEP (U32 EPNum, U8 *pData) {
  U32 cnt, n;

  LPC_USB->Ctrl = ((EPNum & 0x0F) << 2) | CTRL_RD_EN;
//  for (n = 0; n < 3; n++) __nop();   /* 3 clock cycles to fetch the packet length from RAM. */

  do {
    cnt = LPC_USB->RxPLen;
  } while ((cnt & PKT_DV) == 0);
  cnt &= PKT_LNGTH_MASK;

  for (n = 0; n < (cnt + 3) / 4; n++) {
    *((__packed U32 *)pData) = LPC_USB->RxData;
    pData += 4;
  }

  LPC_USB->Ctrl = 0;

  if (((EP_MSK_ISO >> (EPNum & 0x0F)) & 1) == 0) {   /* Non-Isochronous Endpoint */
    WrCmdEP(EPNum, CMD_CLR_BUF);
  }

  return (cnt);
}

U32 USB_WriteEP (U32 EPNum, U8 *pData, U32 cnt) {
  U32 n;

  LPC_USB->Ctrl = ((EPNum & 0x0F) << 2) | CTRL_WR_EN;
//  for (n = 0; n < 3; n++) __nop();   /* 3 clock cycles to fetch the packet length from RAM. */
  LPC_USB->TxPLen = cnt;

  for (n = 0; n < (cnt + 3) / 4; n++) {
    LPC_USB->TxData = *((__packed U32 *)pData);
    pData += 4;
  }

  LPC_USB->Ctrl = 0;

  WrCmdEP(EPNum, CMD_VALID_BUF);

  return (cnt);
}

U32 USB_GetFrame (void) {
  U32 val;

  WrCmd(CMD_RD_FRAME);
  val = RdCmdDat(DAT_RD_FRAME);
  val = val | (RdCmdDat(DAT_RD_FRAME) << 8);

  return (val);
}
