==> vvpai9/LPC1768-Motor-Safety-Interlock/Keil_v4/ARM/Boards/Atmel/ATSAM3U-EK/USBHID/usbhw.c <==
#include <SAM3U.H>                                    /* ATSAM3U definitions  */
#include "type.h"
#include "usb.h"
#include "usbcfg.h"
#include "usbhw.h"
#include "usbcore.h"
#include "usbuser.h"
#define UDPHS_EPTFIFO_BASE (0x20180000)               /* (UDPHS_EPTFIFO) Base Address */

void USB_Init (void) {
  U32 n;

  /* Enables the 48MHz USB Clock UDPCK and System Peripheral USB Clock */
  PMC->PMC_PCER   = (1 << ID_UDPHS);                       /* enable clock for UPDHS */
  PMC->CKGR_UCKR |= (CKGR_UCKR_UPLLCOUNT | CKGR_UCKR_UPLLEN);
  while (!(PMC->PMC_SR & PMC_SR_LOCKU));                   /* wait until PLL is locked */

  /* Configure the pull-up on D+ and disconnect it */
  UDPHS->UDPHS_CTRL |= UDPHS_CTRL_DETACH;                  /* detach */
  UDPHS->UDPHS_CTRL |= UDPHS_CTRL_PULLD_DIS;              /* Disable Pull Down */

  /* Reset IP UDPHS */
  UDPHS->UDPHS_CTRL &= ~UDPHS_CTRL_EN_UDPHS;
  UDPHS->UDPHS_CTRL |=  UDPHS_CTRL_EN_UDPHS;

  /* disable DMA for UDPHS */
  for (n = 1; n <= ((UDPHS->UDPHS_IPFEATURES & UDPHS_IPFEATURES_DMA_CHANNEL_NBR)>>4); n++) {
    /* RESET endpoint canal DMA: */
    UDPHS->UDPHS_DMA[n].UDPHS_DMACONTROL = 0;                     /* STOP command */
    /* Disable endpoint */
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCTLDIS  = 0xFFFFFFFF;
    /* Clear status endpoint */
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCLRSTA  = 0xFFFFFFFF;
    /* Reset endpoint config */
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCTLENB  = 0;
    /* Reset DMA channel (Buff count and Control field) */
    UDPHS->UDPHS_DMA[n].UDPHS_DMACONTROL = (0x1 << 1);            /* NON STOP command */
    /* Reset DMA channel 0 (STOP) */
    UDPHS->UDPHS_DMA[n].UDPHS_DMACONTROL = 0;                     /* STOP command */
    /* Clear DMA channel status (read the register for clear it) */
    UDPHS->UDPHS_DMA[n].UDPHS_DMASTATUS =  UDPHS->UDPHS_DMA[n].UDPHS_DMASTATUS;
  }

    UDPHS->UDPHS_IEN     = 0;
    UDPHS->UDPHS_CLRINT  = UDPHS_CLRINT_UPSTR_RES |
                           UDPHS_CLRINT_ENDOFRSM  |
                           UDPHS_CLRINT_WAKE_UP   |
                           UDPHS_CLRINT_ENDRESET  |
                           UDPHS_CLRINT_INT_SOF   |
                           UDPHS_CLRINT_MICRO_SOF |
                           UDPHS_CLRINT_DET_SUSPD;

  NVIC_EnableIRQ(UDPHS_IRQn);               /* enable USB interrupt */

}

void USB_Connect (BOOL con) {

  if (con) {
    UDPHS->UDPHS_CTRL &= ~UDPHS_CTRL_DETACH;             /* Pull Up on DP     */
    UDPHS->UDPHS_CTRL |=  UDPHS_CTRL_PULLD_DIS;          /* Disable Pull Down */
  } else {
    UDPHS->UDPHS_CTRL |=  UDPHS_CTRL_DETACH;             /* detach            */
    UDPHS->UDPHS_CTRL &= ~UDPHS_CTRL_PULLD_DIS;          /* Enable Pull Down  */
  }
}

void USB_Reset (void) {
  U32 n, EPMask, EPSize;

  EPMask = ((1 << USB_EP_NUM) - 1);

  /* Reset & Disable USB Endpoints */
  for (n = 0; n < USB_EP_NUM; n++) {
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCFG    =  0;
    UDPHS->UDPHS_EPT[n].UDPHS_EPTCTLDIS = (0x1 <<  0);           /* disable EP  */
  }
  UDPHS->UDPHS_EPTRST = EPMask;                                  /* reset   EPs */
  UDPHS->UDPHS_EPTRST = 0;

  /* Setup USB Interrupts */               /* note: Micro_SOF not yet handled */
  UDPHS->UDPHS_IEN = UDPHS_IEN_DET_SUSPD |
                     UDPHS_IEN_ENDOFRSM  |
                     UDPHS_IEN_WAKE_UP   |
                     UDPHS_IEN_INT_SOF   |
                     (EPMask << 8);

  /* Setup Control Endpoint 0 */
  EPSize = USB_CalcSizeEP(USB_MAX_PACKET0);
  UDPHS->UDPHS_EPT[0].UDPHS_EPTCFG     = UDPHS_EPTCFG0_BK_NUMBER_1      |
                                         UDPHS_EPTCFG0_EPT_TYPE_CTL_EPT |
                                         EPSize;
  UDPHS->UDPHS_EPT[0].UDPHS_EPTCTLENB  = UDPHS_EPTCTLENB0_RX_BK_RDY            |
                                         UDPHS_EPTCTLENB0_TX_COMPLT            |
                                         UDPHS_EPTCTLENB0_RX_SETUP__ERR_FL_ISO |
                                         UDPHS_EPTCTLENB0_NYET_DIS             |
                                         UDPHS_EPTCTLENB0_EPT_ENABL;
}

void USB_SetAddress (U32 adr) {

  if (adr) {
    UDPHS->UDPHS_CTRL |=  (UDPHS_CTRL_FADDR_EN | adr);
  } else {
    UDPHS->UDPHS_CTRL &= ~(UDPHS_CTRL_FADDR_EN | UDPHS_CTRL_DEV_ADDR);
  }
}

void USB_EnableEP (U32 EPNum) {

  EPNum &= 0x0F;
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCTLENB = (0x1 << 0); /* Endpoint Enable */
}

void USB_DisableEP (U32 EPNum) {

  EPNum &= 0x0F;
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCTLDIS = (0x1 << 0); /* Endpoint Disable */
}

void USB_ResetEP (U32 EPNum) {

  EPNum &= 0x0F;
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCLRSTA = (0x1 << 6) | /* Data Toggle Clear */
                                            (0x1 << 5);  /* Stall Handshake Request Clear */

  UDPHS->UDPHS_EPTRST |=   1 << EPNum;                   /* reset endpoint */
  UDPHS->UDPHS_EPTRST &= ~(1 << EPNum);

}

void USB_SetStallEP (U32 EPNum) {

  EPNum &= 0x0F;
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSETSTA = (0x1 << 5); /* Stall Handshake Request Set */
}

void USB_ClrStallEP (U32 EPNum) {

  EPNum &= 0x0F;
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCLRSTA = (0x1 << 6) | /* Data Toggle Clear */
                                            (0x1 << 5);  /* Stall Handshake Request Clear */
}

void USB_ClearEPBuf (U32 EPNum) {

  EPNum &= 0x0F;
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSETSTA = (0x1 << 9); /* KILL Bank Set (for IN Endpoint) */
}

U32 USB_ReadEP (U32 EPNum, U8 *pData) {
  U32 cnt, n;
  U8 *pEPFifo;                                                      /* pointer to the endpoint FIFO */

  EPNum &= 0x0F;                                                    /* set EP number */
  pEPFifo = (U8*)((U32*)UDPHS_EPTFIFO_BASE + (0x4000*EPNum)); /* set pointer to EP FIFO */ 
  cnt     = (UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSTA >> 20) & 0x07FF;  /* get numbor of received bytes */
  for (n = 0; n < cnt; n++) {
    *pData++ = *pEPFifo++;
  }
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCLRSTA = (0x1 << 9);             /* Received OUT Data Clear */

  /* RX_Setup must be cleared after Setup packet is read */
  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTCLRSTA = (0x1 << 12);            /* Received SETUP/Error Flow Clear */

  return (cnt);
}

U32 USB_WriteEP (U32 EPNum, U8 *pData, U32 cnt) {
  U32 n;
  U8 *pEPFifo;                                                        /* pointer to the endpoint FIFO */

  EPNum &= 0x0F;                                                      /* set EP number */

  if (UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSTA & (0x1 << 5)) {            /* do not send if EP is stalled */
    return (cnt);
  }

  if (UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSTA & (0x1 << 11)) {           /* bank not ready */
    return (0);
  }

  pEPFifo = (U8*)((U32*)UDPHS_EPTFIFO_BASE + (16384*EPNum));    /* set pointer to EP FIFO */ 
  for (n = 0; n < cnt; n++) {
    *pEPFifo++ = *pData++;                                            /* write data to fifo */
  }

  UDPHS->UDPHS_EPT[EPNum].UDPHS_EPTSETSTA = (0x1 << 11);              /* set packet ready */

  return (cnt);
}

U32 USB_GetFrame (void) {
  U32 val;

  if ((UDPHS->UDPHS_FNUM & (1UL << 31)) == 0) {
    val = (UDPHS->UDPHS_FNUM & UDPHS_FNUM_FRAME_NUMBER) >> 3;
  } else {
    val = 0xFFFFFFFF;
  }

  return (val);
}
